# waiter_robot

waiter_robot_1/: CMakeLists.txt  package.xml
waiter_robot_1/config/: ekf_template.yaml  joint_names_waiter_robot_1.yaml  laserscan_multi_merger.yaml  robot_lds_2d.lua
waiter_robot_1/launch/: Prueba_kinect.launch  Prueba_laser_fusion.launch  Slam_map.launch  Slam_map_real.launch  display.launch  gazebo.launch  gazebo_1.launch  gazebo_2.launch  gazebo_3.launch  gazebo_cafe_world.launch  imu_mega.launch  move_base.launch  robot_remote.launch  rviz_1.rviz  waiter_robot_1_gmapping.launch  waiter_robot_1_gmapping_sim.launch  waiter_robot_navigation.launch
waiter_robot_1/launch/includes/: description.launch.xml
waiter_robot_1/maps/: cafe_map.pgm  cafe_map.yaml
waiter_robot_1/meshes/: base_link.STL  castor_base_L_link.STL  castor_base_R_link.STL  castor_wheel_R_link.STL  wheel_L_link.STL  wheel_R_link.STL
waiter_robot_1/nodes/: keyboard_teleop  robot_waiter_pygame_3.py  tf_broadcaster_imu  turtlebot3_teleop_key
waiter_robot_1/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
waiter_robot_1/rviz/: kinect_lidar.rviz  waiter_robot_1_gmapping.rviz  waiter_robot_2_gmapping.rviz  waiter_robot_navigation.rviz
waiter_robot_1/urdf/: Robot_mesero_URDF.urdf  waiter_robot_1.csv  waiter_robot_1.gazebo.xacro  waiter_robot_1.urdf  waiter_robot_1.urdf.xacro  waiter_robot_1_tf_hoverboard.urdf
waiter_robot_1/worlds/: cafe_world_1.world
