<package format="2">
  <name>waiter_robot_1</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for waiter_robot_1</p>
    <p>This package contains configuration data, 3D models and launch files
for waiter_robot_1 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="diego64t@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>roslaunch</depend>

  <depend>urdf</depend> 
  <depend>xacro</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>


  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>


  <export>
    <architecture_independent />
  </export>
</package>